WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77298
ARIA spinbutton role incorrectly mapped to ProgressIndicatorRole
https://bugs.webkit.org/show_bug.cgi?id=77298
Summary
ARIA spinbutton role incorrectly mapped to ProgressIndicatorRole
Steve Faulkner
Reported
2012-01-29 07:58:01 PST
The HTML5 input type=number element as implemented in webkit includes a spinbutton control which is mapped as AXRole: "AXIncrementor" AXSubrole: "(null)" AXRoleDescription: "stepper" The ARIA spinbutton role is currently mapped to { "spinbutton", ProgressIndicatorRole }, in webkit (source: AccessibilityObject.cpp: 1376) The WAI -ARIA implementation guide maps spinbutton to (source:
http://www.w3.org/TR/wai-aria-implementation/#mapping_role_table
) AXRole: "AXIncrementor" AXSubrole: "(null)" AXRoleDescription: "stepper" Recommend fixing implementation so it maps to the correct role.
Attachments
patch
(3.74 KB, patch)
2012-07-09 09:31 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Faulkner
Comment 1
2012-07-08 01:12:01 PDT
I believe changing the current line
http://trac.webkit.org/browser/trunk/Source/WebCore/accessibility/AccessibilityObject.cpp#L1402
from { "spinbutton", ProgressIndicatorRole }, to { "spinbutton", IncrementorRole }, would resolve the issue there may be some changes required in other files for other platforms as in Windows the appropriate mapping would likely be { "spinbutton", SpinButtonRole },
Steve Faulkner
Comment 2
2012-07-08 01:32:01 PDT
Examples of javascript widgets affected by this bug: in the Ext GWT library the simple form the spin button is identified using ARIA role=spinbutton , it is incorrectly exposed as progress indicator
http://dev.sencha.com/playpen/gxt/aria2/test.html?id=focusmanager
in the Dojo digit library
http://archive.dojotoolkit.org/nightly/checkout/dijit/tests/form/test_Spinner.html
chris fleizach
Comment 3
2012-07-09 09:31:05 PDT
Created
attachment 151258
[details]
patch
WebKit Review Bot
Comment 4
2012-07-11 14:21:06 PDT
Comment on
attachment 151258
[details]
patch Clearing flags on attachment: 151258 Committed
r122372
: <
http://trac.webkit.org/changeset/122372
>
WebKit Review Bot
Comment 5
2012-07-11 14:21:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug