ARIA spinbutton role incorrectly mapped to ProgressIndicatorRole https://bugs.webkit.org/show_bug.cgi?id=77298

Reviewed by Anders Carlsson.

Source/WebCore:

* accessibility/AccessibilityObject.cpp:
(WebCore::createARIARoleMap):

LayoutTests:

* platform/mac/accessibility/aria-spinbutton-expected.txt:
* platform/mac/accessibility/aria-spinbutton.html:


Canonical link: https://commits.webkit.org/108848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122372 268f45cc-cd09-0410-ab3c-d52691b4dbfc